--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
                     <ul class="text-sm text-gray-600 space-y-2">
                         <li class="flex items-start">
                             <i class="fa-solid fa-circle text-xs mt-1.5 mr-2 text-primary"></i>
-                            <span>黑棋和白棋轮流在棋盘上落子</span>
+                            <span>黑棋先手，但如果对方让你先下，请大喊：“你是不是不会玩？” 对方会羞愧认输。</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fa-solid fa-circle text-xs mt-1.5 mr-2 text-primary"></i>
-                            <span>先在横、竖或斜方向形成五子连线者获胜</span>
+                            <span>五连珠就赢，但如果连成六颗，恭喜触发“贪吃蛇模式”，请当场吃掉一颗棋子</span>
                         </li>
                         <li class="flex items-start">
                             <i class="fa-solid fa-circle text-xs mt-1.5 mr-2 text-primary"></i>
-                            <span>点击棋盘上的交叉点放置棋子</span>
+                            <span>“记住你是人类，如果棋子开始骂你菜，请自觉认输并高呼‘我是菜鸡’！” 😂🎲</span>
                         </li>
                     </ul>
                 </div>
